--- a/report/main.tex
+++ b/report/main.tex
@@ -45,7 +45,7 @@ Technical Report}
 \maketitle
 
 \begin{abstract}
-In this technical report, we introduce the technicalities of our project for the course Introduction to Data Science 2023, and enter the details on few selected highlights.
+In this technical report, we introduce the technicalities of our project for the course Introduction to Data Science 2023, and enter the details on a few selected highlights.
 \end{abstract}
 
 \section{Motivation}
@@ -53,7 +53,7 @@ In this technical report, we introduce the technicalities of our project for the
 Our motivation for the project was to understand the situation of the economic cycle, based on US historical economic data, and give traders an insight of possible opportunities. Our purpose was to predict short-term performance of financial indices based on macroeconomic data and other market sector indices. We also wanted to learn the correlation between market indices and macroeconomic data.
 
 \section{Running the Code}
-We recommand having a version of Python 3.8 or superior, and an updated version of pip. Our project is hosted on GitHub at the address \href{https://github.com/sechlol/intro_ds_2023}{https://github.com/sechlol/intro\_ds\_2023}. First of all, clone the repository. Then, locate the file \texttt{requirements.txt} in the project root folder and install the required packages with the command \texttt{pip install -r requirements.txt}. To run the code, simply call \texttt{python main.py}.
+We recommend having a version of Python 3.8 or superior, and an updated version of pip. Our project is hosted on GitHub at the address \href{https://github.com/sechlol/intro_ds_2023}{https://github.com/sechlol/intro\_ds\_2023}. First of all, clone the repository. Then, locate the file \texttt{requirements.txt} in the project root folder and install the required packages with the command \texttt{pip install -r requirements.txt}. To run the code, simply call \texttt{python main.py}.
 
 \section{Software Architecture}
 
@@ -146,7 +146,7 @@ Unfortunately, the outcome was not as desired. Our predictions were as good as a
 
 So our end result cannot be said to be actionable, despite our best efforts. This was expected, because it is not so easy to predict the stock market, even taking into consideration a wide array of macroeconomic indicators. Indeed, if it was so easy everyone would do it, and in the blink of an eye, the efficiency of the markets would take care of terminating the party before things get out of hand. Nevertheless we wanted to try, because it seemed like an interesting learning opportunity, plus you never know...
 
-Nevertheless, we managed to build a good framework for data collection, processing and analysis that can be used for further development, for example in the case of getting access to more data, or adding new ML models. For us all, it was an exemplary learning experience encompassing all steps in the life cycle of a data science project, from finding the data to presenting the end results.
+Yet, we managed to build a good framework for data collection, processing and analysis that can be used for further development, for example in the case of getting access to more data, or adding new ML models. For us all, it was an exemplary learning experience encompassing all steps in the life cycle of a data science project, from finding the data to presenting the end results.
 
 It is worth mentioning that one component of our group was dealing with many of these topics for the first time, and gained an important amount of insights, from the details of using Git for collaborative coding to the core ideas in data science and even getting an excuse to study a little economic theory. So it was a great opportunity with a splendid learning outcome.
 
